[package]
name = "rsndt"
version = "0.1.0"
edition = "2024"

[dependencies]
# math
nalgebra = "0.34.1"
hashbrown = { version = "0.16", features = ["rayon"] }
# parallelism
rayon = "1.10"
# point cloud
pcd-rs = { version = "0.12", features = ["derive"] }
# visualization
rerun = "0.28"
# utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap ={ version = "4.5", features = ["derive"] }

[dev-dependencies]
approx = "0.5"